--- a/app.json
+++ b/app.json
@@ -23,10 +23,16 @@
     },
     "web": {
       "favicon": "./assets/favicon.png",
-      "bundler": "metro",
+      "bundler": "metro"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ]
     ]
   }
 }
