--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "cloudinary-react-native": "^1.0.0",
-    "expo": "~51.0.19",
+    "expo": "~51.0.18",
     "expo-constants": "~16.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.18",
+    "expo-router": "~3.5.17",
     "expo-status-bar": "~1.12.1",
-    "nativewind": "4.0.1",
+    "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
@@ -27,9 +27,9 @@
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@types/react": "~18.2.79",
-    "typescript": "~5.3.3"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
